[package]
name = "help_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.2.1",features=["derive"]}
openai = "1.0.0-alpha.8"
tokio = {version="1.26.0",features=["full"]}
dotenv = "0.15.0"
